# yt-channel-downloader

./: .codacy.yaml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  \  about.ui  about_ui.py  cookie_check.py  form.ui  form_ui.py  freeze.py  load-env  login_prompt.ui  login_prompt_ui.py  main.py  pyappexec.ini  pyproject.toml  requirements.txt  requirements_.txt  reset_key_4_github.sh  resources_rc.py  settings.ui  settings_ui.py  socha  start  ui_about.py  ui_form.py  ui_login_prompt.py  ui_settings.py  yt-channel-downloader
assets/: resources.qrc
classes/: YTChannel.py  checkbox.py  constants.py  delegates.py  dialogs.py  download_thread.py  enums.py  fetch_progress_dialog.py  ffmpeg_checker.py  get_list_thread.py  logger.py  login_prompt_dialog.py  mainwindow.py  runtime_info.py  settings.py  settings_manager.py  updater.py  utils.py  validators.py  videoitem.py  youtube_auth.py
config/: constants.py
icon.iconset/: Contents.json
packaging/icons/: icon.icns
scripts/: cookie_check.py
src/yt_channel_downloader/: __init__.py  __main__.py
src/yt_channel_downloader/classes/: YTChannel.py  auto_update_worker.py  browser_config.py  checkbox_delegate.py  custom_dialog.py  download_thread.py  fetch_progress_dialog.py  ffmpeg_checker.py  get_list_thread.py  js_warning_tracker.py  logger.py  login_prompt_dialog.py  mainwindow.py  node_runtime_notifier.py  progress_bar_delegate.py  quiet_ydl_logger.py  release_info.py  runtime_info.py  runtime_mode.py  selection_size_worker.py  settings.py  settings_manager.py  support_prompt.py  update_result.py  (+11 more)
tests/: test_codacy_regressions.py  test_mainwindow_progress_restore.py  test_playlist_fetch.py  test_smoke.py  test_support_prompt.py
ui/: about.ui  about_ui.py  form.ui  form_ui.py  login_prompt.ui  login_prompt_ui.py  settings.ui  settings_ui.py  ui_about.py  ui_form.py  ui_login_prompt.py  ui_settings.py
(+6 files in other folders)
